Bug 1898247 - Add a test for migrated glean probes (HTTP_PAGE_* and HTTP_SUB_* in nsLoadGroup.cpp) r=kershaw,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D218757

UltraBlame original commit: ef9e56aed344e01243a3bcdf29348c9b70160f99

--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -5111,6 +5111,27 @@ js
 ]
 [
 "
+test_loadgroup_glean
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+android
+'
+"
+]
+[
+"
 test_localhost_offline
 .
 js
