Bug 1924192 - Create mochitest-browser-translations test definition r=translations-reviewers,jmaher,sparky,gregtatum
Splits browser-translations mochitests into their own Treeherder group
with the label `tr8ns`.

Depends on D225983

Differential Revision: https://phabricator.services.mozilla.com/D225414

UltraBlame original commit: 7161afe20737cba9767f4acf90cb70968dac24e9

--- a/taskcluster/kinds/test/test-sets.yml
+++ b/taskcluster/kinds/test/test-sets.yml
@@ -973,6 +973,12 @@ media
 -
 mochitest
 -
+browser
+-
+translations
+-
+mochitest
+-
 chrome
 -
 mochitest
@@ -1184,6 +1190,12 @@ media
 -
 mochitest
 -
+browser
+-
+translations
+-
+mochitest
+-
 chrome
 -
 mochitest
@@ -1315,6 +1327,12 @@ mochitest
 browser
 -
 media
+-
+mochitest
+-
+browser
+-
+translations
 -
 mochitest
 -
@@ -1521,6 +1539,12 @@ mochitest
 browser
 -
 media
+-
+mochitest
+-
+browser
+-
+translations
 -
 mochitest
 -
@@ -1971,6 +1995,12 @@ media
 -
 mochitest
 -
+browser
+-
+translations
+-
+mochitest
+-
 chrome
 -
 gpu
@@ -2088,6 +2118,12 @@ mochitest
 browser
 -
 media
+-
+mochitest
+-
+browser
+-
+translations
 -
 mochitest
 -
