Bug 1924192 - Define fetch task for Translations e2e tests r=jmaher,sparky
Defines a new fetch task that will allow us to fetch artifacts
from Remote Settings for use in Translations end-to-end tests
in Firefox CI.

Depends on D225414

Differential Revision: https://phabricator.services.mozilla.com/D225415

UltraBlame original commit: da8005f825501ce697f7abd3c2d66fabb998e5fc

--- a/taskcluster/kinds/test/mochitest.yml
+++ b/taskcluster/kinds/test/mochitest.yml
@@ -3089,6 +3089,32 @@ false
 virtualization
 :
 virtual
+fetches
+:
+fetch
+:
+-
+translations
+.
+inference
+-
+translations
+.
+esen
+.
+lex
+-
+translations
+.
+esen
+.
+model
+-
+translations
+.
+esen
+.
+vocab
 mochitest
 -
 chrome
