--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -13059,6 +13059,167 @@ tags
 :
 -
 Settings
+set_as_default_browser_native_prompt_shown
+:
+type
+:
+event
+description
+:
+>
+This
+event
+records
+when
+the
+Set
+as
+Default
+Browser
+native
+prompt
+is
+shown
+.
+send_in_pings
+:
+-
+metrics
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923744
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D225145
+data_sensitivity
+:
+-
+interaction
+notification_emails
+:
+-
+android
+-
+probes
+mozilla
+.
+com
+expires
+:
+never
+metadata
+:
+tags
+:
+-
+Settings
+default_browser_changed_via_native_system_prompt
+:
+type
+:
+event
+description
+:
+|
+Indicates
+the
+default
+browser
+was
+changed
+via
+the
+native
+OS
+prompt
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923744
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D225145
+data_sensitivity
+:
+-
+interaction
+notification_emails
+:
+-
+android
+-
+probes
+mozilla
+.
+com
+expires
+:
+never
+metadata
+:
+tags
+:
+-
+Settings
 distribution_id
 :
 type
@@ -86048,6 +86209,71 @@ is_first_run
 type
 :
 boolean
+#
+Campaign
+source
+of
+the
+install
+referrer
+response
+install_referrer_response_utm_source
+:
+type
+:
+string
+#
+Campaign
+medium
+of
+the
+install
+referrer
+response
+install_referrer_response_utm_medium
+:
+type
+:
+string
+#
+Campaign
+name
+of
+the
+install
+referrer
+response
+install_referrer_response_utm_campaign
+:
+type
+:
+string
+#
+Campaign
+term
+of
+the
+install
+referrer
+response
+install_referrer_response_utm_term
+:
+type
+:
+string
+#
+Campaign
+content
+of
+the
+install
+referrer
+response
+install_referrer_response_utm_content
+:
+type
+:
+string
 description
 :
 |
