Bug 1918776 - Implement telemetry for Add and Edit Bookmark menu items. r=android-reviewers,Roger
Implement telemetry needed for the Add Bookmark and Edit Bookmark menu items in the menu redesign.

Differential Revision: https://phabricator.services.mozilla.com/D222170

UltraBlame original commit: a4b43c6c9c473b9be65fbcb3480a830d5fea0e6b

--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -1071,6 +1071,7 @@ These
 items
 include
 :
+add_bookmark
 add_to_homescreen
 add_to_top_sites
 addon_details
@@ -1084,6 +1085,7 @@ desktop_view_on
 discover_more_extensions
 web_extension_browser_action_clicked
 downloads
+edit_bookmark
 extensions_learn_more
 extensions_submenu
 find_in_page
