Bug 1918637 - Skip test_ext_idle.html on Linux asan and ccov builds (where it still fails intermittently). r=willdurand
Differential Revision: https://phabricator.services.mozilla.com/D226168

UltraBlame original commit: 787ca9900abf6ed5300b4c4ece7831d7e68e470b

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.toml
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.toml
@@ -1613,6 +1613,33 @@ on
 Linux
 debug
 )
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+(
+asan
+|
+|
+ccov
+)
+"
+#
+bug
+1918637
+(
+Fails
+intermittently
+similarly
+to
+Linux
+debug
+)
 ]
 [
 "
