Bug 1925280: Add Content Process Sandbox Nimbus feature. r=handyman,beth
Differential Revision: https://phabricator.services.mozilla.com/D226109

UltraBlame original commit: cba5f22b424c41c020fbbf621660f9381ceb8954

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -23380,3 +23380,51 @@ variables
 :
 {
 }
+contentProcessSandbox
+:
+description
+:
+Prefs
+that
+control
+the
+content
+process
+sandbox
+.
+owner
+:
+bowen
+mozilla
+.
+com
+hasExposure
+:
+false
+variables
+:
+Level
+:
+description
+:
+Content
+process
+sandbox
+level
+type
+:
+int
+setPref
+:
+branch
+:
+user
+pref
+:
+security
+.
+sandbox
+.
+content
+.
+level
