Bug 1922594 - Add strings for FxA menu messages and the ability to experiment with the sign-in CTA on both panels. r=fluent-reviewers,omc-reviewers,skhamis,desktop-theme-reviewers,bolsson,pdahiya,hjones
The CTAs for the AppMenu have a collapsed state (since the AppMenu has a Sign In
button to the right of the CTA taking up space), whereas the CTAs for
the FxA avatar panel do not.

Differential Revision: https://phabricator.services.mozilla.com/D224948

UltraBlame original commit: 9372edf868fe71e06460f95c9a45284bbad88bb1

--- a/browser/base/content/test/sync/browser.toml
+++ b/browser/base/content/test/sync/browser.toml
@@ -14,6 +14,20 @@ js
 ]
 [
 "
+browser_appmenu_signin_cta_variants
+.
+js
+"
+]
+[
+"
+browser_avatar_menu_signin_cta_variants
+.
+js
+"
+]
+[
+"
 browser_contextmenu_sendpage
 .
 js
