--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -10558,6 +10558,12 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+"
+windows
+"
 allowed_app_sources
 :
 bug_numbers
@@ -10675,6 +10681,12 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+"
+windows
+"
 launch_method
 :
 bug_numbers
@@ -10772,6 +10784,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+windows
 launched_to_handle
 :
 bug_numbers
@@ -10987,6 +11003,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+windows
 invoked_to_handle
 :
 bug_numbers
@@ -11204,6 +11224,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+windows
 is_default_handler
 :
 bug_numbers
@@ -11313,6 +11337,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+windows
 is_kept_in_dock
 :
 bug_numbers
@@ -11362,6 +11390,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+mac
 is_taskbar_pinned
 :
 bug_numbers
@@ -11425,6 +11457,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+windows
 is_taskbar_pinned_private
 :
 bug_numbers
@@ -11484,6 +11520,10 @@ record_in_processes
 :
 -
 main
+operating_systems
+:
+-
+windows
 pictureinpicture
 :
 most_concurrent_players
