--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -22256,6 +22256,88 @@ mirror
 :
 always
 #
+Should
+we
+do
+lazy
+initialization
+of
+origins
+?
+#
+When
+enabled
+origins
+for
+temporary
+storage
+are
+not
+initialized
+during
+#
+temporary
+storage
+initialization
+they
+are
+initialized
+lazily
+instead
+.
+#
+If
+there
+are
+other
+origins
+in
+the
+group
+they
+are
+initialized
+all
+together
+.
+#
+This
+feature
+is
+currently
+still
+in
+development
+and
+experimental
+not
+#
+recommended
+for
+normal
+use
+yet
+.
+-
+name
+:
+dom
+.
+quotaManager
+.
+temporaryStorage
+.
+lazyOriginInitialization
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 A
 pref
 that
