Bug 1867997 - Add support for pausing QM IO thread after finishing origin initialization; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D199080

UltraBlame original commit: 555ec1e4e7177cc87ddb55c69a9f8b6a0fac23a3

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -22412,6 +22412,40 @@ that
 is
 used
 to
+slow
+down
+origin
+initialization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+quotaManager
+.
+originInitialization
+.
+pauseOnIOThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
+A
+pref
+that
+is
+used
+to
 enable
 testing
 features
