Bug 1925188 - Don't abort pending promise by screen.orientation.lock during change event. r=dom-core,edgar
We should clear pending orientation lock promise in document before change
event is dispatched. After that, we should resolve this promise.

Differential Revision: https://phabricator.services.mozilla.com/D225945

UltraBlame original commit: 77f1bae331cb8cf49b70bf29f116beceb0ffb1d8

--- a/testing/web-platform/meta/screen-orientation/lock-unlock-check.html.ini
+++ b/testing/web-platform/meta/screen-orientation/lock-unlock-check.html.ini
@@ -56,6 +56,17 @@ debug
 FAIL
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+:
+PASS
 FAIL
 [
 Re
@@ -91,4 +102,15 @@ debug
 FAIL
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+:
+PASS
 FAIL
