Bug 1925140 [wpt PR 48658] - Update wpt metadata, a=testonly
wpt-pr: 48658
wpt-type: metadata

UltraBlame original commit: 80937e975aa40323ee92394ba8229db5b093d8e3

--- a/testing/web-platform/meta/html/semantics/forms/the-select-element/customizable-select/select-parsing.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-select-element/customizable-select/select-parsing.tentative.html.ini
@@ -134,3 +134,20 @@ datalist
 expected
 :
 FAIL
+[
+Input
+tags
+should
+parse
+inside
+select
+instead
+of
+closing
+the
+select
+.
+]
+expected
+:
+FAIL
