--- a/testing/web-platform/meta/clipboard-apis/async-navigator-clipboard-basics.https.html.ini
+++ b/testing/web-platform/meta/clipboard-apis/async-navigator-clipboard-basics.https.html.ini
@@ -106,13 +106,17 @@ android
 "
 :
 FAIL
-#
-android
-clipboard
-doesn
-'
-t
-support
-image
-type
+[
+navigator
 .
+clipboard
+.
+write
+(
+web_custom_format
+)
+succeeds
+]
+expected
+:
+FAIL
