Bug 1925342 [wpt PR 48675] - Update wpt metadata, a=testonly
wpt-pr: 48675
wpt-type: metadata

UltraBlame original commit: 55a43c41ca5da3903c40a4bf1a5b703f207379bc

--- a/testing/web-platform/meta/css/css-values/calc-size/animation/interpolate-size-width-composition.html.ini
+++ b/testing/web-platform/meta/css/css-values/calc-size/animation/interpolate-size-width-composition.html.ini
@@ -502,3 +502,86 @@ be
 expected
 :
 FAIL
+[
+Compositing
+:
+property
+<
+width
+>
+underlying
+[
+max
+-
+content
+\
+]
+from
+add
+[
+200px
+\
+]
+to
+add
+[
+auto
+\
+]
+at
+(
+-
+0
+.
+3
+)
+should
+be
+[
+300px
+\
+]
+]
+expected
+:
+FAIL
+[
+Compositing
+:
+property
+<
+width
+>
+underlying
+[
+max
+-
+content
+\
+]
+from
+add
+[
+200px
+\
+]
+to
+add
+[
+auto
+\
+]
+at
+(
+0
+)
+should
+be
+[
+300px
+\
+]
+]
+expected
+:
+FAIL
