--- a/testing/web-platform/meta/css/css-anchor-position/anchor-scope-basic.html.ini
+++ b/testing/web-platform/meta/css/css-anchor-position/anchor-scope-basic.html.ini
@@ -175,3 +175,40 @@ reverse
 expected
 :
 FAIL
+[
+Can
+anchor
+to
+a
+name
+both
+defined
+and
+scoped
+by
+the
+same
+element
+]
+expected
+:
+FAIL
+[
+Sibling
+can
+not
+anchor
+into
+anchor
+-
+scope
+even
+when
+anchor
+-
+name
+present
+]
+expected
+:
+FAIL
