Bug 1925655 [wpt PR 48703] - Fix safari-wptrunner.yml to match the schema, a=testonly
Automatic update from web-platform-tests
Fix safari-wptrunner.yml to match the schema

(whoops)

--

wpt-commits: 7e91324675c24957fa5bdf82b16f0c337754cb17
wpt-pr: 48703

UltraBlame original commit: e1371eb138d49134c978ad220729daf645161f65

--- a/testing/web-platform/tests/.github/workflows/safari-wptrunner.yml
+++ b/testing/web-platform/tests/.github/workflows/safari-wptrunner.yml
@@ -52,7 +52,7 @@ required
 true
 type
 :
-bool
+boolean
 safaridriver
 -
 diagnose
@@ -70,7 +70,7 @@ required
 true
 type
 :
-bool
+boolean
 #
 We
 never
