Bug 1925683 - [wpt-sync] Update web-platform-tests to 7e91324675c24957fa5bdf82b16f0c337754cb17, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 7e91324675c24957fa5bdf82b16f0c337754cb17
wpt-type: landing

UltraBlame original commit: 7b44a2886f0e526d98b2309164aa153d69a049ab

--- a/testing/web-platform/meta/content-security-policy/frame-ancestors/__dir__.ini
+++ b/testing/web-platform/meta/content-security-policy/frame-ancestors/__dir__.ini
@@ -14,6 +14,7 @@ allowed
 [
 Alloc
 AllocateProtoAndIfaceCache
+CallGetter
 CreateFunction
 CreateInterfaceObject
 CreateNativeGlobalForInner
@@ -21,6 +22,7 @@ Define
 DefineAccessorPropertyById
 DefineDataProperty
 DoGetOrCreateDOMReflector
+GetExistingProperty
 GetOrCreateDOMReflector
 GetPropertyOperation
 GetProtoObjectHandle
@@ -33,6 +35,9 @@ MaybeEnterInterpreterTrampoline
 NativeDefineDataProperty
 NativeLookupOwnPropertyInline
 NewArray
+PromiseReactionJob
+RunHandler
+RunInternal
 alloc
 :
 :
@@ -68,6 +73,27 @@ NativeDefineProperty
 js
 :
 :
+Nursery
+:
+:
+reallocateBuffer
+js
+:
+:
+PrivateScriptData
+:
+:
+InitFromStencil
+js
+:
+:
+Proxy
+:
+:
+get
+js
+:
+:
 frontend
 :
 :
@@ -75,6 +101,14 @@ CompilationStencil
 :
 :
 instantiateStencils
+js
+:
+:
+frontend
+:
+:
+EmitScriptThingsVector
+js_new
 js_pod_arena_malloc
 js_pod_arena_realloc
 make_unique
@@ -94,6 +128,20 @@ EventListenerManager
 :
 :
 HandleEventSingleListener
+mozilla
+:
+:
+EventTargetChainItem
+:
+:
+HandleEvent
+mozilla
+:
+:
+RunnableTask
+:
+:
+Run
 mozilla
 :
 :
@@ -255,12 +303,21 @@ nsDynamicAtom
 :
 :
 Create
+nsGlobalWindowInner
+:
+:
+InitDocumentDependentState
+nsGlobalWindowOuter
+:
+:
+SetNewDocument
 nsPresContext
 :
 :
 NotifyContentfulPaint
 operator
 pod_arena_realloc
+pod_malloc
 setInternal
 unknown
 stack
