--- a/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
+++ b/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
@@ -31,7 +31,7 @@ true
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Policy
 to
@@ -53,7 +53,7 @@ false
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 Policy
 to
@@ -79,7 +79,7 @@ true
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 Policy
 to
@@ -105,7 +105,7 @@ true
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 Policy
 to
@@ -132,7 +132,16 @@ true
 ]
 expected
 :
-NOTRUN
+if
+os
+=
+=
+"
+android
+"
+:
+TIMEOUT
+FAIL
 [
 Policy
 to
@@ -159,7 +168,16 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
 NOTRUN
+FAIL
 [
 Policy
 to
@@ -188,7 +206,25 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+:
+TIMEOUT
+if
+os
+=
+=
+"
+android
+"
+:
 NOTRUN
+FAIL
 [
 Policy
 to
@@ -217,6 +253,27 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+FAIL
+TIMEOUT
+]
 NOTRUN
 [
 Policy
@@ -246,6 +303,27 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+TIMEOUT
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
 NOTRUN
 [
 Policy
