--- a/testing/web-platform/meta/digital-credentials/disabled-by-permissions-policy.https.sub.html.ini
+++ b/testing/web-platform/meta/digital-credentials/disabled-by-permissions-policy.https.sub.html.ini
@@ -13,9 +13,6 @@ sub
 .
 html
 ]
-expected
-:
-TIMEOUT
 [
 Permissions
 -
@@ -62,7 +59,7 @@ iframes
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Header
 -
@@ -82,7 +79,7 @@ attribute
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 Setting
 digital
@@ -106,4 +103,4 @@ iframes
 ]
 expected
 :
-NOTRUN
+FAIL
