--- a/testing/web-platform/meta/digital-credentials/enabled-on-self-origin-by-permissions-policy.https.sub.html.ini
+++ b/testing/web-platform/meta/digital-credentials/enabled-on-self-origin-by-permissions-policy.https.sub.html.ini
@@ -19,9 +19,6 @@ sub
 .
 html
 ]
-expected
-:
-TIMEOUT
 [
 Permissions
 -
@@ -70,7 +67,7 @@ iframes
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Permissions
 -
@@ -94,7 +91,7 @@ iframes
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 Permissions
 -
@@ -118,4 +115,4 @@ attribute
 ]
 expected
 :
-NOTRUN
+FAIL
