--- a/testing/web-platform/meta/digital-credentials/get.tentative.https.html.ini
+++ b/testing/web-platform/meta/digital-credentials/get.tentative.https.html.ini
@@ -7,9 +7,6 @@ https
 .
 html
 ]
-expected
-:
-TIMEOUT
 [
 navigator
 .
@@ -214,7 +211,7 @@ iframe
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Mediation
 is
@@ -227,4 +224,4 @@ DigitalCredential
 ]
 expected
 :
-NOTRUN
+FAIL
