--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-unsafe-none.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-unsafe-none.https.html.ini
@@ -1392,33 +1392,12 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
 :
 [
 OK
@@ -1454,58 +1433,16 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-swgl
-and
-debug
-:
-[
-TIMEOUT
-OK
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-swgl
-and
-not
-debug
 :
 [
 OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-swgl
-:
-[
-OK
+ERROR
 TIMEOUT
 ]
 [
