--- a/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
+++ b/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
@@ -17,11 +17,6 @@ element
 expected
 :
 if
-fission
-and
-not
-asan
-and
 (
 os
 =
@@ -31,18 +26,22 @@ linux
 "
 )
 and
+not
+tsan
+and
+not
 debug
-:
-[
-PASS
-FAIL
-]
-if
+and
+asan
+and
 not
 fission
-and
-debug
-and
+:
+[
+FAIL
+PASS
+]
+if
 (
 os
 =
@@ -51,27 +50,48 @@ os
 linux
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-fission
 and
-asan
-:
-[
-PASS
-FAIL
-]
-if
 not
-fission
+tsan
 and
 not
 debug
+and
+not
+asan
 :
+PASS
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -88,11 +108,6 @@ screen
 expected
 :
 if
-fission
-and
-not
-asan
-and
 (
 os
 =
@@ -102,18 +117,22 @@ linux
 "
 )
 and
+not
+tsan
+and
+not
 debug
-:
-[
-PASS
-FAIL
-]
-if
+and
+asan
+and
 not
 fission
-and
-debug
-and
+:
+[
+FAIL
+PASS
+]
+if
 (
 os
 =
@@ -122,27 +141,48 @@ os
 linux
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-fission
 and
-asan
-:
-[
-PASS
-FAIL
-]
-if
 not
-fission
+tsan
 and
 not
 debug
+and
+not
+asan
 :
+PASS
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -156,11 +196,6 @@ position
 expected
 :
 if
-fission
-and
-not
-asan
-and
 (
 os
 =
@@ -170,18 +205,22 @@ linux
 "
 )
 and
+not
+tsan
+and
+not
 debug
-:
-[
-PASS
-FAIL
-]
-if
+and
+asan
+and
 not
 fission
-and
-debug
-and
+:
+[
+FAIL
+PASS
+]
+if
 (
 os
 =
@@ -190,27 +229,48 @@ os
 linux
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-fission
 and
-asan
-:
-[
-PASS
-FAIL
-]
-if
 not
-fission
+tsan
 and
 not
 debug
+and
+not
+asan
 :
+PASS
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
