--- a/testing/web-platform/meta/intersection-observer/root-margin-rounding.html.ini
+++ b/testing/web-platform/meta/intersection-observer/root-margin-rounding.html.ini
@@ -31,49 +31,32 @@ rounding
 expected
 :
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-debug
-and
-not
-fission
-and
-not
-swgl
 :
-[
 PASS
-FAIL
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
+PASS
+if
+os
+=
+=
+"
+android
+"
+:
+PASS
 [
 PASS
 FAIL
