--- a/testing/web-platform/meta/intersection-observer/scroll-margin-non-scrolling-root.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-non-scrolling-root.html.ini
@@ -20,45 +20,30 @@ intersection
 expected
 :
 if
-fission
-and
-not
-asan
-and
 (
 os
 =
 =
 "
 linux
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
 "
 )
 and
 not
 tsan
-:
-[
-PASS
-FAIL
-]
-if
-not
-fission
 and
+not
 debug
 and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
 (
 os
 =
@@ -67,27 +52,46 @@ os
 linux
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-fission
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
-not
-fission
 and
 not
+tsan
+and
+debug
+and
+fission
+:
+PASS
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
 debug
 :
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
