--- a/testing/web-platform/meta/navigation-api/navigation-history-entry/entries-after-bfcache-in-iframe.html.ini
+++ b/testing/web-platform/meta/navigation-api/navigation-history-entry/entries-after-bfcache-in-iframe.html.ini
@@ -25,6 +25,18 @@ win
 OK
 TIMEOUT
 ]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+OK
+TIMEOUT
+]
 [
 entries
 (
@@ -51,6 +63,18 @@ os
 =
 "
 win
+"
+:
+[
+FAIL
+TIMEOUT
+]
+if
+os
+=
+=
+"
+linux
 "
 :
 [
