--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-cross.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-cross.tentative.sub.https.window.js.ini
@@ -20,55 +20,15 @@ html
 expected
 :
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-not
-tsan
-and
-fission
-and
 not
 asan
-:
-[
-OK
-TIMEOUT
-]
-if
+and
 (
 os
 =
 =
 "
 linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
 "
 )
 and
@@ -77,32 +37,22 @@ debug
 and
 not
 tsan
-and
-not
-fission
 :
 [
 OK
 TIMEOUT
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
+asan
 and
-(
-processor
-=
-=
-"
-x86
-"
-)
+fission
+:
+TIMEOUT
+if
+asan
+and
+not
+fission
 :
 [
 OK
