--- a/testing/web-platform/meta/webrtc-stats/supported-stats.https.html.ini
+++ b/testing/web-platform/meta/webrtc-stats/supported-stats.https.html.ini
@@ -15,6 +15,23 @@ os
 =
 =
 "
+mac
+"
+)
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 android
 "
 )
@@ -1194,6 +1211,23 @@ succeeds
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+]
 if
 (
 os
