--- a/testing/web-platform/meta/wasm/jsapi/jspi/rejects.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/jspi/rejects.any.js.ini
@@ -102,3 +102,54 @@ JS
 expected
 :
 FAIL
+[
+rejects
+.
+any
+.
+js
+]
+[
+Throw
+after
+the
+first
+suspension
+]
+expected
+:
+FAIL
+[
+Throw
+before
+suspending
+]
+expected
+:
+FAIL
+[
+Throw
+and
+propagate
+via
+Promise
+]
+expected
+:
+FAIL
+[
+Stack
+overflow
+]
+expected
+:
+FAIL
+[
+Try
+to
+suspend
+JS
+]
+expected
+:
+FAIL
